<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activity.AddNewStory">

    <ImageView
        android:id="@+id/image_add_story"
        android:src="@drawable/no_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/desc_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/CircularProgress"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836"
        tools:visibility="visible" />

    <Button
        android:id="@+id/gallery_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:text="@string/choose_image"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/image_add_story" />

    <TextView
        android:id="@+id/description"
        style="@style/secondaryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/gallery_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_desc_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/int_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"

            android:inputType="textMultiLine"
            android:lines="6"
            android:maxLines="6"
            android:scrollbars="vertical"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:text="@string/upload_add"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/input_desc_story" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/secondaryTitle"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location detected"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/open_camera"
        android:contentDescription="@string/floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat = "@drawable/camera_image"
        app:backgroundTint="@color/orchid_pink"
        app:tint = "@color/white"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>