<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.RegisterActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:theme="@style/CircularProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_register"
        style="@style/firstPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/register_story_app"
        android:textColor="@color/sky_blue"
        app:layout_constraintStart_toStartOf="@id/edt_name"
        app:layout_constraintEnd_toEndOf="@+id/edt_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/story_app_logo"
        android:contentDescription="@string/logo_story_app"
        app:layout_constraintTop_toTopOf="@id/tv_register"
        app:layout_constraintStart_toStartOf="@id/edt_name"
        app:layout_constraintEnd_toEndOf="@+id/edt_name"/>

    <com.dwiki.storyapp.custom_view.CustomEditName
        android:id="@+id/edt_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo" />

    <com.dwiki.storyapp.custom_view.CustomEditEmail
        android:id="@+id/edt_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_name"
        app:layout_constraintStart_toStartOf="@+id/edt_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <TextView
        android:id="@+id/err_email"
        style="@style/formName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/invalid_email"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        tools:visibility="visible" />

    <com.dwiki.storyapp.custom_view.CustomEditPassword
        android:id="@+id/edt_pass1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_pass"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        />
    <TextView
        android:id="@+id/err_pass"
        style="@style/formName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/invalid_password"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_repassword"
        style="@style/formName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/retype_password"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="@id/edt_pass"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass1" />

    <com.dwiki.storyapp.custom_view.CustomEditPassword
        android:id="@+id/edt_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_pass"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_pass1"
        app:layout_constraintStart_toStartOf="@+id/edt_pass1"
        app:layout_constraintTop_toBottomOf="@+id/tv_repassword"
        />

    <com.dwiki.storyapp.custom_view.CustomRegisterButton
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_pass"
        app:layout_constraintStart_toStartOf="@+id/edt_pass"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass"
        android:layout_marginTop="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>