<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:theme="@style/CircularProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/story_app_logo"
        android:contentDescription="@string/logo_story_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp" />


    <TextView
        android:id="@+id/sign_in_text"
        style="@style/secondaryTitle"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/image_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <com.dwiki.storyapp.custom_view.CustomEditEmail
        android:id="@+id/edt_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_text"
        app:layout_constraintStart_toStartOf="@+id/sign_in_text"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_text" />

    <TextView
        android:id="@+id/err_email"
        style="@style/formName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/invalid_email"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        tools:visibility="visible" />

    <com.dwiki.storyapp.custom_view.CustomEditPassword
        android:id="@+id/edt_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_pass"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        />

    <TextView
        android:id="@+id/err_pass"
        style="@style/formName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/invalid_password"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass"
        tools:visibility="visible" />

    <com.dwiki.storyapp.custom_view.CustomButtonLogin
        android:id="@+id/btn_sign_in"
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_pass"
        app:layout_constraintStart_toStartOf="@+id/edt_pass"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass"
        android:layout_marginTop="40dp" />

    <com.dwiki.storyapp.custom_view.CustomRegisterButton
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        android:layout_marginTop="20dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>